package RemoteWithSlotsAndUndo.command;

public class NoCommand implements Command {
    public void execute() {
    }

    public void undo() {
    }
}
