' Generated by UML Generator
' Encoded: hLPDRvj04BtpA_O8QecIz8RKAgrRnvRikgeL-L3ri8N1h08x5hiaLTFajtSNpB9BmQqiJi2yDsy-TWQu4PAMiYfoJzmpVg0bBKYSKo7UIrco7vM4POnyotu1kVGobW29MHddu7arYto50YMia2PGaYUFa5TFIb6o-9aKb76VbdiHaQtIuljltuE8F21Bl6VNVOPSbfZlcCpkU8ArpWlo6HO5vOdoFzxLvZGTj5VAyVXesyDGvpGOnWyq940UsRx8KKQ4SVcQcE16IzbCP6Diwr4wo3zKKYBVKV6b4XbOSZOhJV-7felfyonOOjDGRMlkkewks3wJJGTpZDL983UajXqrn-_3GLE6xwRh_tLcCs2veiyf7mtp8Wu0ILsLCnABvUsYjfAtv8s3h3zzNDwjM-pQmLQRNGjSES1cFc-1IrDSbzvmXPagtgwnW8HLXMt9yN6i2Ufn3tAhgzCsNP_gYxf0cT8OshbeDW5-GgmMoEyTxAcERioCDRsD3H9PB8qSIdZOsbtkLzz9-SCgmPavBbG3fqhIqfeuonK-JfLa9pLnZkjwzAPAqr6R9DFFUDuyr--N3NSAoxKjQY3tHMI8liq9peZOMvuJ8RlTE2Vcy5SBmz1yU8OPOVZEC0Pt_kBYzpyOjKGt5yDREI9ZKqPrhBqPaR4OeohkP8y8kQIULZTxZdTlj4vXMh0v-_vq37Yv7MxSRe0dwi_e3m
' URL: http://www.plantuml.com/plantuml/uml/hLPDRvj04BtpA_O8QecIz8RKAgrRnvRikgeL-L3ri8N1h08x5hiaLTFajtSNpB9BmQqiJi2yDsy-TWQu4PAMiYfoJzmpVg0bBKYSKo7UIrco7vM4POnyotu1kVGobW29MHddu7arYto50YMia2PGaYUFa5TFIb6o-9aKb76VbdiHaQtIuljltuE8F21Bl6VNVOPSbfZlcCpkU8ArpWlo6HO5vOdoFzxLvZGTj5VAyVXesyDGvpGOnWyq940UsRx8KKQ4SVcQcE16IzbCP6Diwr4wo3zKKYBVKV6b4XbOSZOhJV-7felfyonOOjDGRMlkkewks3wJJGTpZDL983UajXqrn-_3GLE6xwRh_tLcCs2veiyf7mtp8Wu0ILsLCnABvUsYjfAtv8s3h3zzNDwjM-pQmLQRNGjSES1cFc-1IrDSbzvmXPagtgwnW8HLXMt9yN6i2Ufn3tAhgzCsNP_gYxf0cT8OshbeDW5-GgmMoEyTxAcERioCDRsD3H9PB8qSIdZOsbtkLzz9-SCgmPavBbG3fqhIqfeuonK-JfLa9pLnZkjwzAPAqr6R9DFFUDuyr--N3NSAoxKjQY3tHMI8liq9peZOMvuJ8RlTE2Vcy5SBmz1yU8OPOVZEC0Pt_kBYzpyOjKGt5yDREI9ZKqPrhBqPaR4OeohkP8y8kQIULZTxZdTlj4vXMh0v-_vq37Yv7MxSRe0dwi_e3m
' Generated on: 2025-12-10T00:52:49.261245

@startuml
skinparam classAttributeIconSize 0
hide circle

class RemoteLoader {
  +{static} main(args: String[]): void
}

class RemoteControlWithUndo {
  ~onCommands: Command
  ~offCommands: Command
  ~undoCommand: Command
  --
  +RemoteControlWithUndo()
  +setCommand(slot: int, onCommand: Command, offCommand: Command): void
  +onButtonWasPushed(slot: int): void
  +offButtonWasPushed(slot: int): void
  +undoButtonWasPushed(): void
  +toString(): String
}

class Light {
  ~location: String
  --
  +Light(location: String)
  +on(): void
  +off(): void
}

class CeilingFan {
  ~location: String
  ~speed: int
  +{static} HIGH: int = 3
  +{static} MEDIUM: int = 2
  +{static} LOW: int = 1
  +{static} OFF: int = 0
  --
  +CeilingFan(location: String)
  +high(): void
  +medium(): void
  +low(): void
  +off(): void
  +getSpeed(): int
}

interface Command {
  +execute(): void
  +undo(): void
}

class CeilingFanOffCommand {
  ~ceilingFan: CeilingFan
  ~prevSpeed: int
  --
  +CeilingFanOffCommand(ceilingFan: CeilingFan)
  +execute(): void
  +undo(): void
}

class CeilingFanHighCommand {
  ~ceilingFan: CeilingFan
  ~prevSpeed: int
  --
  +CeilingFanHighCommand(ceilingFan: CeilingFan)
  +execute(): void
  +undo(): void
}

class CeilingFanLowCommand {
  ~ceilingFan: CeilingFan
  ~prevSpeed: int
  --
  +CeilingFanLowCommand(ceilingFan: CeilingFan)
  +execute(): void
  +undo(): void
}

class CeilingFanMediumCommand {
  ~ceilingFan: CeilingFan
  ~prevSpeed: int
  --
  +CeilingFanMediumCommand(ceilingFan: CeilingFan)
  +execute(): void
  +undo(): void
}

class NoCommand {
  +execute(): void
  +undo(): void
}

class LightOnCommand {
  ~light: Light
  --
  +LightOnCommand(light: Light)
  +execute(): void
  +undo(): void
}

class LightOffCommand {
  ~light: Light
  --
  +LightOffCommand(light: Light)
  +execute(): void
  +undo(): void
}

RemoteControlWithUndo o-- Command
RemoteControlWithUndo --> Command
CeilingFanOffCommand ..|> Command
CeilingFanOffCommand --> CeilingFan
CeilingFanHighCommand ..|> Command
CeilingFanHighCommand --> CeilingFan
CeilingFanLowCommand ..|> Command
CeilingFanLowCommand --> CeilingFan
CeilingFanMediumCommand ..|> Command
CeilingFanMediumCommand --> CeilingFan
NoCommand ..|> Command
LightOnCommand ..|> Command
LightOnCommand --> Light
LightOffCommand ..|> Command
LightOffCommand --> Light
@enduml